[gd_scene load_steps=19 format=3 uid="uid://crlkuni2202pw"]

[ext_resource type="PackedScene" uid="uid://dv0gqt42k76sy" path="res://scenes/files/draggable_file.tscn" id="1_nnh13"]
[ext_resource type="Script" path="res://scripts/systems/desktop.gd" id="1_y7jii"]
[ext_resource type="PackedScene" uid="uid://borhx2rspskdv" path="res://scenes/files/trash_bin.tscn" id="2_n3o80"]
[ext_resource type="PackedScene" uid="uid://c0b5v2u8afjtv" path="res://scenes/files/corrupted_file.tscn" id="3_rm4x6"]
[ext_resource type="PackedScene" uid="uid://b5urrjt5nnfyi" path="res://scenes/mouse_manager.tscn" id="3_vdwjr"]
[ext_resource type="PackedScene" uid="uid://cylps5fisf5fa" path="res://scenes/windows/draggable_window.tscn" id="4_7gjup"]
[ext_resource type="PackedScene" uid="uid://bu4xvcsll0w5n" path="res://scenes/files/error_exe_file.tscn" id="4_ux808"]
[ext_resource type="PackedScene" uid="uid://ce37kssdhimi3" path="res://scenes/files/download_spawner_file.tscn" id="5_i7eqv"]
[ext_resource type="PackedScene" uid="uid://dcoxgyk10v7ah" path="res://scenes/windows/download_window.tscn" id="5_q1gx7"]
[ext_resource type="PackedScene" uid="uid://cuk43ykfp2af0" path="res://scenes/windows/recursive_window.tscn" id="6_6hjia"]
[ext_resource type="PackedScene" uid="uid://dh0tjx8c6go3" path="res://scenes/files/recursive_spawner_file.tscn" id="6_bqlhh"]
[ext_resource type="PackedScene" uid="uid://b6di764ete100" path="res://scenes/files/wizard_spawner_file.tscn" id="7_ri7dv"]
[ext_resource type="PackedScene" uid="uid://dmvynlgunihpn" path="res://scenes/windows/recycling_window.tscn" id="8_heqa6"]
[ext_resource type="AudioStream" uid="uid://cu2g7108agyr7" path="res://assets/audio/sounds/[Popup] .wav" id="9_8atgh"]
[ext_resource type="AudioStream" uid="uid://hlylwmss44mn" path="res://assets/audio/sounds/Explode - Scroll Wood Single.wav" id="9_caf8r"]
[ext_resource type="AudioStream" uid="uid://dc7e3wnqpollv" path="res://assets/audio/sounds/Explode - Scroll Wood Short.wav" id="9_j8rme"]
[ext_resource type="PackedScene" uid="uid://cjykajyw8e0wu" path="res://scenes/ui/antivirus.tscn" id="10_lpn00"]
[ext_resource type="PackedScene" uid="uid://ka1g3ihekiob" path="res://scenes/windows/wizard_window.tscn" id="15_2kita"]

[node name="Desktop" type="Node2D"]
script = ExtResource("1_y7jii")
file_scene = ExtResource("1_nnh13")
corrupted_files_scene = ExtResource("3_rm4x6")
error_exe_scene = ExtResource("4_ux808")
download_file_scene = ExtResource("5_i7eqv")
recursive_file_scene = ExtResource("6_bqlhh")
wizard_file_scene = ExtResource("7_ri7dv")
window_scene = ExtResource("4_7gjup")
download_window_scene = ExtResource("5_q1gx7")
recursive_window_scene = ExtResource("6_6hjia")
recycling_window_scene = ExtResource("8_heqa6")
wizard_window_scene = ExtResource("15_2kita")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="PopupMessageSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_8atgh")
volume_db = -10.0
pitch_scale = 1.4

[node name="ExplodeFileSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_caf8r")
volume_db = -5.0
pitch_scale = 0.6
bus = &"SFX"

[node name="ExplodeFilesSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_j8rme")
volume_db = -5.0
pitch_scale = 0.6
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Antivirus" parent="." instance=ExtResource("10_lpn00")]
offset_left = 456.0
offset_top = -80.0
offset_right = 456.0
offset_bottom = -80.0

[node name="TrashBin" parent="." instance=ExtResource("2_n3o80")]
position = Vector2(-512, -256)

[node name="Files" type="Node" parent="."]

[node name="Windows" type="Node" parent="."]

[node name="MouseManager" parent="." instance=ExtResource("3_vdwjr")]

[node name="Node" type="Node" parent="."]

[node name="BoundsDelimiter" type="ColorRect" parent="Node"]
anchors_preset = -1
anchor_left = -0.472
anchor_top = -0.469
anchor_right = 0.472
anchor_bottom = 0.198
offset_left = -0.255981
offset_top = 47.912
offset_right = -227.744
offset_bottom = -0.304031
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true
